# payments-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
api/: guard.py  main.py  spa.py
deploy/: Dockerfile.prod  README-deploy.md  architecture.md  fly.toml  owner-setup.sh  seed-neon.sh
docs/: ROADMAP.md  architecture.md  glossary.md  prior-art.md  retrieval-quality-playbook.md
docs/adr/: 0001-language-python.md  0002-vector-store-pgvector.md  0003-embedding-model-pinned.md  0004-raw-api-no-framework.md  0005-production-llm-haiku.md  0006-structured-json-citations.md  0007-cross-model-llm-judge.md  0008-per-page-chunking.md  0009-boilerplate-and-sentence-chunking.md  0010-streamlit-ui.md  (+9 more)
evals/: __init__.py  answer_eval.py  answer_golden_set.yaml  judge.py  retrieval_eval.py  retrieval_golden_set.yaml
frontend/: angular.json  package-lock.json  package.json
infra/: docker-compose.yml  init.sql
payments_rag/: __init__.py  chunker.py  cli.py  config.py  db.py  embedding.py  fusion.py  health.py  indexer.py  orchestrator.py  query_log.py  retriever.py  textprep.py
spike/: __init__.py  _log.py  _make_sample_pdf.py  step1_db.py  step2_llm.py  step3_embed.py  step4_pdf.py
tests/: conftest.py  test_answer_eval.py  test_chunker.py  test_db_integration.py  test_fusion.py  test_guard.py  test_orchestrator.py  test_rerank.py  test_retrieval_eval.py  test_retrieval_integration.py  test_smoke.py  test_textprep.py
ui/: streamlit_app.py
(+32 files in other folders)
